pybind11_add_module(snowdrift snowdrift.cpp)
target_link_libraries(snowdrift PRIVATE GSL::gsl GSL::gslcblas)
set_target_properties(snowdrift PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
pybind11_add_module(pickling_cpp pickling_cpp.cpp)
target_link_libraries(pickling_cpp PRIVATE GSL::gsl GSL::gslcblas)
set_target_properties(pickling_cpp PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
pybind11_add_module(pickling_composed_classes pickling_composed_classes.cpp)
target_link_libraries(pickling_composed_classes PRIVATE GSL::gsl GSL::gslcblas)
set_target_properties(pickling_composed_classes PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
pybind11_add_module(gsl_error gsl_error.cpp)
target_link_libraries(gsl_error PRIVATE GSL::gsl GSL::gslcblas)
set_target_properties(gsl_error PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
pybind11_add_module(fixation_properties fixation_properties.cpp)
target_link_libraries(fixation_properties PRIVATE GSL::gsl GSL::gslcblas)
set_target_properties(fixation_properties PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
pybind11_add_module(custom_stateless_genotype custom_stateless_genotype.cpp)
target_link_libraries(custom_stateless_genotype PRIVATE GSL::gsl GSL::gslcblas)
set_target_properties(custom_stateless_genotype PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
pybind11_add_module(custom_additive custom_additive.cpp)
target_link_libraries(custom_additive PRIVATE GSL::gsl GSL::gslcblas)
set_target_properties(custom_additive PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
pybind11_add_module(numpy_array_interface numpy_array_interface.cpp)
set_target_properties(numpy_array_interface PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
pybind11_add_module(poptools poptools.cpp)
set_target_properties(poptools PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
target_link_libraries(poptools PRIVATE GSL::gsl GSL::gslcblas)
pybind11_add_module(testMultivariateGSSmo testMultivariateGSSmo.cpp)
set_target_properties(testMultivariateGSSmo PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
target_link_libraries(testMultivariateGSSmo PRIVATE GSL::gsl GSL::gslcblas)
pybind11_add_module(discrete_demography_roundtrips discrete_demography_roundtrips.cpp)
target_link_libraries(discrete_demography_roundtrips PRIVATE GSL::gsl GSL::gslcblas)
set_target_properties(discrete_demography_roundtrips PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
