pybind11_add_module(ll_snowdrift ll_snowdrift.cc)
target_link_libraries(ll_snowdrift PRIVATE GSL::gsl GSL::gslcblas)
set_target_properties(ll_snowdrift PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
pybind11_add_module(pickling_cpp pickling_cpp.cc)
target_link_libraries(pickling_cpp PRIVATE GSL::gsl GSL::gslcblas)
set_target_properties(pickling_cpp PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
pybind11_add_module(pickling_composed_classes pickling_composed_classes.cc)
target_link_libraries(pickling_composed_classes PRIVATE GSL::gsl GSL::gslcblas)
set_target_properties(pickling_composed_classes PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
pybind11_add_module(gsl_error gsl_error.cc)
target_link_libraries(gsl_error PRIVATE GSL::gsl GSL::gslcblas)
set_target_properties(gsl_error PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
pybind11_add_module(custom_stateless_genotype custom_stateless_genotype.cc)
target_link_libraries(custom_stateless_genotype PRIVATE GSL::gsl GSL::gslcblas)
set_target_properties(custom_stateless_genotype PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
pybind11_add_module(custom_additive custom_additive.cc)
target_link_libraries(custom_additive PRIVATE GSL::gsl GSL::gslcblas)
set_target_properties(custom_additive PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
pybind11_add_module(numpy_array_interface numpy_array_interface.cc)
set_target_properties(numpy_array_interface PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
pybind11_add_module(poptools poptools.cc)
set_target_properties(poptools PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
target_link_libraries(poptools PRIVATE GSL::gsl GSL::gslcblas)
pybind11_add_module(testMultivariateGSSmo testMultivariateGSSmo.cc)
set_target_properties(testMultivariateGSSmo PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
target_link_libraries(testMultivariateGSSmo PRIVATE GSL::gsl GSL::gslcblas)
pybind11_add_module(inherit_noise inherit_noise.cc)
target_link_libraries(inherit_noise PRIVATE GSL::gsl GSL::gslcblas)
set_target_properties(inherit_noise PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
pybind11_add_module(EsizeZero EsizeZero.cc)
target_link_libraries(EsizeZero PRIVATE GSL::gsl GSL::gslcblas)
set_target_properties(EsizeZero PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
pybind11_add_module(sregion_cdf sregion_cdf.cc)
target_link_libraries(sregion_cdf PRIVATE GSL::gsl GSL::gslcblas)
set_target_properties(sregion_cdf PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
pybind11_add_module(call_Sregion call_Sregion.cc)
target_link_libraries(call_Sregion PRIVATE GSL::gsl GSL::gslcblas)
set_target_properties(call_Sregion PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests)
