pybind11_add_module(ll_snowdrift ll_snowdrift.cc)
target_link_libraries(ll_snowdrift PRIVATE GSL::gsl GSL::gslcblas)
set_target_properties(ll_snowdrift PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests_with_cpp)
pybind11_add_module(gsl_error gsl_error.cc)
target_link_libraries(gsl_error PRIVATE GSL::gsl GSL::gslcblas)
set_target_properties(gsl_error PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests_with_cpp)
pybind11_add_module(custom_stateless_genotype custom_stateless_genotype.cc)
target_link_libraries(custom_stateless_genotype PRIVATE GSL::gsl GSL::gslcblas)
set_target_properties(custom_stateless_genotype PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests_with_cpp)
pybind11_add_module(custom_additive custom_additive.cc)
target_link_libraries(custom_additive PRIVATE GSL::gsl GSL::gslcblas)
set_target_properties(custom_additive PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/tests_with_cpp)
